# smoke-notifer

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  setup.sh  smoke-notifier.service  smokeping_monitor.py  uninstall.sh
smoke_notifier/: __init__.py  __main__.py  alerts.py  commands.py  config.py  constants.py  graph.py  logging_setup.py  monitor.py  rrd.py  state.py  telegram.py
